fix safari z-index bug

--- a/web_app/journeyplanner/static/journeyplanner/main.css
+++ b/web_app/journeyplanner/static/journeyplanner/main.css
@@ -14,6 +14,11 @@ html, body {
   #map {
     height: 100%;
     position: relative;
+    /* -webkit-transform: none !important; 
+    z-index: auto !important;
+  }
+    #map  > div{
+        z-index: auto !important; */
   }
 
   #fullscreen-map {
@@ -23,7 +28,7 @@ html, body {
 
   /*map interface*/
   #map-interface {
-    z-index: 1000;
+    z-index: 5000;
     position: absolute;
     display: block;
     top: 30px;
@@ -35,7 +40,9 @@ html, body {
     overflow-x: hidden;
     box-shadow: 4px 4px 8px #B8B8B8;
   }
-
+  .pac-container {
+    z-index: 5001 !important;
+}
   #map-interface-content {
     max-width: 450px;
     width: 450px;
